Refactor ClientService to improve delete logic and update methods
- Updated deleteById method to use count queries for checking dependencies before deletion.
- Changed save logic in update and create methods to return the found entity instead of the saved entity.
- Introduced validateClientStatusForAssociation method to encapsulate client status validation logic.
- Cleaned up unnecessary code and improved readability in various methods.

Enhance ConstantRepository with EntityGraph for optimized fetching

- Added @EntityGraph annotations to findByInstrumentId and findById methods for eager loading of related entities.

Refactor ConstantService to simplify delete logic

- Removed caching annotations from deleteById method and added logging for deleted constants.

Improve DamRepository with additional queries and EntityGraph

- Added new methods for fetching dams with sections and by client ID with sections.
- Introduced EntityGraph for optimized fetching of related entities.

Refactor DamService to enhance readability and performance

- Simplified findById and findAll methods with improved lazy loading handling.
- Consolidated logic for checking dependencies before deletion.
- Updated methods to return found entities instead of saved entities.

Refactor DangerLevelService for improved transaction management

- Added @Transactional annotations to findAll and findById methods for read-only transactions.

Enhance DeterministicLimitRepository with EntityGraph

- Added EntityGraph to findByOutputId and findById methods for optimized fetching.

Refactor DeterministicLimitService to improve entity handling

- Updated createOrUpdate method to return the found entity after saving.

Enhance DocumentationDamRepository with EntityGraph

- Added EntityGraph to findByDam and findByDamId methods for optimized fetching.

Refactor DocumentationDamService for improved entity handling

- Updated save method to return the found entity after saving.

Enhance HistoricalDataJobRepository wi